syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "StudentManagement.Grpc";

service LopHocRPC {
    rpc GetLopHoc(LopHocRequest) returns (LopHocResponse);
    rpc GetAllLopHoc(google.protobuf.Empty) returns (GetAllLopHocResponse);
}


message LopHoc {
    int32 id = 1;
    string name = 2;
}

message LopHocRequest {
    int32 id = 1;
}

message LopHocResponse {
    LopHoc classroom = 1;
}

message GetAllLopHocResponse {
    repeated LopHoc classrooms = 1;
}


