syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "StudentManagement.Grpc";

service GiaoVienRPC {
    rpc GetGiaoVien(GiaoVienRequest) returns (GiaoVienResponse);
    rpc GetAllGiaoVien(google.protobuf.Empty) returns (GetAllGiaoVienResponse);
}

message GiaoVien {
    int32 id = 1;
    string name = 2;
    string subject = 3;
}

message GiaoVienRequest {
    int32 id = 1;
}

message GiaoVienResponse {
    GiaoVien teacher = 1;
}

message GetAllGiaoVienResponse {
    repeated GiaoVien teachers = 1;
}

